{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 210,
  "lineage": "ed054613-c425-5b9a-00b9-527e5c240c57",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "mytf_appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/backendAddressPools/myfinoBackendPool",
                "ip_addresses": [],
                "name": "myfinoBackendPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/backendHttpSettingsCollection/http_setting",
                "name": "http_setting",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendIPConfigurations/myfinoAGIPConfig",
                "name": "myfinoAGIPConfig",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/publicIPAddresses/myAGPublicIPAddress",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendPorts/myfinoFrontendPort",
                "name": "myfinoFrontendPort",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/myAGSubnet"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendIPConfigurations/myfinoAGIPConfig",
                "frontend_ip_configuration_name": "myfinoAGIPConfig",
                "frontend_port_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendPorts/myfinoFrontendPort",
                "frontend_port_name": "myfinoFrontendPort",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/httpListeners/myfinoListener",
                "name": "myfinoListener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway",
            "identity": [],
            "location": "eastus",
            "name": "myAppGateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/backendAddressPools/myfinoBackendPool",
                "backend_address_pool_name": "myfinoBackendPool",
                "backend_http_settings_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/backendHttpSettingsCollection/http_setting",
                "backend_http_settings_name": "http_setting",
                "http_listener_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/httpListeners/myfinoListener",
                "http_listener_name": "myfinoListener",
                "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/requestRoutingRules/myfinoRoutingRule",
                "name": "myfinoRoutingRule",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "finopay-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "my_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/loadBalancers/lb-fino/frontendIPConfigurations/Frontend_ip",
                "name": "Frontend_ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/publicIPAddresses/lb-public_ip"
              }
            ],
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/loadBalancers/lb-fino",
            "location": "eastus",
            "name": "lb-fino",
            "resource_group_name": "finopay-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.my_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "my_lb_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-0/ipConfigurations/nic-ipconfig-0",
              "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-1/ipConfigurations/nic-ipconfig-1"
            ],
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/loadBalancers/lb-fino/backendAddressPools/Fino-pool",
            "loadbalancer_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/loadBalancers/lb-fino",
            "name": "Fino-pool"
          },
          "dependencies": [
            "azurerm_lb.my_lb",
            "azurerm_public_ip.my_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_outbound_rule",
      "name": "my_lboutbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "my_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/loadBalancers/lb-fino/probes/fino-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/loadBalancers/lb-fino",
            "name": "fino-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.my_lb",
            "azurerm_public_ip.my_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "my_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mytf_database_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/dabase-nic",
            "internal_domain_name_suffix": "g12iozln2tvenhwrrgkg1kevgd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my_nic_configuration",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/Database-tier-2"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-1C-55-0C",
            "name": "dabase-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "finopay-rg",
            "virtual_machine_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Compute/virtualMachines/Database-vm"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_database_subnet_2",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-0",
            "internal_domain_name_suffix": "g12iozln2tvenhwrrgkg1kevgd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic-ipconfig-0",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/Web-tier-1"
              }
            ],
            "location": "eastus",
            "name": "nic-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "finopay-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_finopay_subnet_1",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-1",
            "internal_domain_name_suffix": "g12iozln2tvenhwrrgkg1kevgd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic-ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/Web-tier-1"
              }
            ],
            "location": "eastus",
            "name": "nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "finopay-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_finopay_subnet_1",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "nic-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/backendAddressPools/myfinoBackendPool",
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-0/ipConfigurations/nic-ipconfig-0|/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/backendAddressPools/myfinoBackendPool",
            "ip_configuration_name": "nic-ipconfig-0",
            "network_interface_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-0"
          },
          "dependencies": [
            "azurerm_application_gateway.mytf_appgw",
            "azurerm_network_interface.nic-1",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.frontend",
            "azurerm_subnet.my_finopay_subnet_1",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/backendAddressPools/myfinoBackendPool",
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-1/ipConfigurations/nic-ipconfig-1|/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/applicationGateways/myAppGateway/backendAddressPools/myfinoBackendPool",
            "ip_configuration_name": "nic-ipconfig-1",
            "network_interface_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-1"
          },
          "dependencies": [
            "azurerm_application_gateway.mytf_appgw",
            "azurerm_network_interface.nic-1",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.frontend",
            "azurerm_subnet.my_finopay_subnet_1",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "my_nic_lb_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/loadBalancers/lb-fino/backendAddressPools/Fino-pool",
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-0/ipConfigurations/nic-ipconfig-0|/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/loadBalancers/lb-fino/backendAddressPools/Fino-pool",
            "ip_configuration_name": "nic-ipconfig-0",
            "network_interface_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-0"
          },
          "dependencies": [
            "azurerm_lb.my_lb",
            "azurerm_lb_backend_address_pool.my_lb_pool",
            "azurerm_network_interface.nic-1",
            "azurerm_public_ip.my_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_finopay_subnet_1",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/loadBalancers/lb-fino/backendAddressPools/Fino-pool",
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-1/ipConfigurations/nic-ipconfig-1|/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/loadBalancers/lb-fino/backendAddressPools/Fino-pool",
            "ip_configuration_name": "nic-ipconfig-1",
            "network_interface_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkInterfaces/nic-1"
          },
          "dependencies": [
            "azurerm_lb.my_lb",
            "azurerm_lb_backend_address_pool.my_lb_pool",
            "azurerm_network_interface.nic-1",
            "azurerm_public_ip.my_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_finopay_subnet_1",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mytf_database_NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkSecurityGroups/Database_tier-NSG",
            "location": "eastus",
            "name": "Database_tier-NSG",
            "resource_group_name": "finopay-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Database-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mytf_web_NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkSecurityGroups/Web_tier-NSG",
            "location": "eastus",
            "name": "Web_tier-NSG",
            "resource_group_name": "finopay-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_https",
                "priority": 105,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/publicIPAddresses/lb-public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.190.203.5",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "lb-public_ip",
            "resource_group_name": "finopay-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/publicIPAddresses/myAGPublicIPAddress",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.235.26.152",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myAGPublicIPAddress",
            "resource_group_name": "finopay-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/myAGSubnet",
            "name": "myAGSubnet",
            "resource_group_name": "finopay-rg",
            "virtual_network_name": "finopay-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my_database_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/Database-tier-2",
            "name": "Database-tier-2",
            "resource_group_name": "finopay-rg",
            "virtual_network_name": "finopay-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my_finopay_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/Web-tier-1",
            "name": "Web-tier-1",
            "resource_group_name": "finopay-rg",
            "virtual_network_name": "finopay-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NS-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/Web-tier-1",
            "network_security_group_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkSecurityGroups/Web_tier-NSG",
            "subnet_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/Web-tier-1"
          },
          "dependencies": [
            "azurerm_network_security_group.mytf_web_NSG",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_finopay_subnet_1",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NS-group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/Database-tier-2",
            "network_security_group_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkSecurityGroups/Database_tier-NSG",
            "subnet_id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/Database-tier-2"
          },
          "dependencies": [
            "azurerm_network_security_group.mytf_database_NSG",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_database_subnet_2",
            "azurerm_virtual_network.mytf_finopay_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mytf_finopay_Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6587f836-e46d-46ea-9ed1-89946da89533",
            "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet",
            "location": "eastus",
            "name": "finopay-vnet",
            "resource_group_name": "finopay-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/Web-tier-1",
                "name": "Web-tier-1",
                "security_group": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkSecurityGroups/Web_tier-NSG"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/Database-tier-2",
                "name": "Database-tier-2",
                "security_group": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/networkSecurityGroups/Database_tier-NSG"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/36c85bbf-6a87-41aa-8982-05f97c8866df/resourceGroups/finopay-rg/providers/Microsoft.Network/virtualNetworks/finopay-vnet/subnets/myAGSubnet",
                "name": "myAGSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}